# pixiv-isucon2016-rust

./: Cargo.toml  README.md
src/: main.rs
templates/: banned.html  header.html  index.html  layout.html  login.html  login.tpl  post.html  posts.html  register.html  user.html
